--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 /build
 /regime_classifier
+python/.ipynb_checkpoints/pf2d_simple-checkpoint.ipynb
+python/.ipynb_checkpoints/pf2d_demo_daily-checkpoint.ipynb
+python/.ipynb_checkpoints/pf2d_demo-checkpoint.ipynb
+python/.ipynb_checkpoints/pf2d_demo_v2-checkpoint.ipynb
+python/pf2d_simple.ipynb
