--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ python/.ipynb_checkpoints/pf2d_demo_daily-checkpoint.ipynb
 python/.ipynb_checkpoints/pf2d_demo-checkpoint.ipynb
 python/.ipynb_checkpoints/pf2d_demo_v2-checkpoint.ipynb
 python/pf2d_simple.ipynb
+2D/PMMH_GUIDE.md
+2D/ADAPTIVE_GUIDE.md
