jupyter notebook integration

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,11 @@ python/.ipynb_checkpoints/pf2d_demo_v2-checkpoint.ipynb
 python/pf2d_simple.ipynb
 2D/PMMH_GUIDE.md
 2D/ADAPTIVE_GUIDE.md
+2D/trading_system_architecture.md
+python/.ipynb_checkpoints/pf2d_visualization-checkpoint.ipynb
+python/__pycache__/pf2d.cpython-313.pyc
+python/.ipynb_checkpoints/pf2d_analysis-checkpoint.ipynb
+python/.ipynb_checkpoints/pf2d_vis-checkpoint.ipynb
+python/__pycache__/pf2d.cpython-313.pyc
+python/pf2d_analysis.ipynb
+python/pf2d_analysis.png
