--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,14 @@ python/.ipynb_checkpoints/pf2d_vis-checkpoint.ipynb
 python/__pycache__/pf2d.cpython-313.pyc
 python/pf2d_analysis.ipynb
 python/pf2d_analysis.png
+python/.ipynb_checkpoints/bocpd_pf2d_demo-checkpoint.ipynb
+python/.ipynb_checkpoints/pf2d_demo2-checkpoint.ipynb
+python/.ipynb_checkpoints/varbreak_pf2d_demo-checkpoint.ipynb
+python/__pycache__/pf2d.cpython-38.pyc
+python/bocpd_pf2d_comparison.png
+python/bocpd_pf2d_crisis_zoom.png
+python/pf2d_bitcoin.png
+python/pf2d_ground_truth.png
+python/varbreak_pf2d_demo.ipynb
+python/pf2d_demo2.ipynb
+python/varbreak_pf2d_results.png
