--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ python/pf2d_ground_truth.png
 python/varbreak_pf2d_demo.ipynb
 python/pf2d_demo2.ipynb
 python/varbreak_pf2d_results.png
+python/bocpd_pf2d_demo.ipynb
+python/pf2d_demo.ipynb
