+ Dual Output (filter + smooth K=5)

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ python/rbpf_diagnostic_vol.png
 python/rbpf_diagnostic.csv
 python/.ipynb_checkpoints/rbpf_diagnostic-checkpoint.ipynb
 python/rbpf_diagnostic.ipynb
+3-RBPF/RBPF_KSC_DOCUMENTATION (1).md
