real case scenarios for rbpf

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ python/rbpf_diagnostic.csv
 python/.ipynb_checkpoints/rbpf_diagnostic-checkpoint.ipynb
 python/rbpf_diagnostic.ipynb
 3-RBPF/RBPF_KSC_DOCUMENTATION (1).md
+3-RBPF/RBPF_CHANGE_DETECTION.md
+3-RBPF/APF_REJUVENATION.md
